feat: Spring Boot upgrade to 3.5.14: Initial changes by OpenRewrite plugin.